<resources>

    <!-- 通用-->
    <string name="app_name">大连市直机关工会合作伙伴</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">登录</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="error">错误</string>
    <string name="lost_connection">与服务器失去连接</string>

    <string name="open_camera_permission_title">需要打开摄像头权限</string>
    <string name="open_camera_permission_message">扫描二维码需要打开应用程序的摄像头的权限：权限管理->相机</string>
    <string name="open_read_write_storage_permission_title">需要打开存储卡读写权限</string>
    <string name="open_read_write_storage_permission_message">图片预览需要打开应用程序的读写的权限：权限管理->读写手机存储</string>
    <string name="open_camera_permission_cancel">取消</string>
    <string name="open_camera_permission_ok">去设置</string>

    <!--页面-->
    <string name="menu_search">搜索</string>
    <!-- 退到主页面，快速按2次返回退出-->
    <string name="close_our_app_promote">再按一次返回键退出</string>

    <!-- 菜单-->
    <string name="action_change_password">修改登录密码</string>
    <string name="action_about_us">关于</string>
    <string name="action_bulletin_detail">活动详情</string>
    <string name="action_bulletin">活动</string>
    <string name="action_search_bulletin">活动搜索</string>
    <string name="action_new_bulletin">创建活动</string>
    <string name="action_back">返回</string>

    <!-- 功能-->
    <string name="function_main">主页</string>
    <string name="function_bulletin">活动</string>
    <string name="function_scan">扫描</string>
    <string name="function_add_bulletin">创建活动</string>
    <string name="function_add_bulletin_commit">创建</string>
    <string name="function_logout">退出</string>

    <!-- 登录页面 -->
    <string name="login_page_promote_user_name">用户名</string>
    <string name="login_page_promote_password">密码</string>
    <string name="login_page_sign_in">登  录</string>

    <string name="login_page_user_name_empty">用户名不能为空</string>
    <string name="login_page_user_name_invalid">用户名规则不合法</string>
    <string name="login_page_password_empty">密码不能为空</string>
    <string name="login_page_password_invalid">密码规则不合法</string>

    <!--主页面-->
    <string name="logout_title">提示</string>
    <string name="logout_message">确定要退出？</string>
    <string name="logout_cancel">取消</string>
    <string name="logout_ok">确定</string>

    <!-- 修改密码页面-->
    <string name="passwd_page_user_name">用户名：</string>
    <string name="passwd_page_user_old_passwd">旧密码:</string>
    <string name="passwd_page_user_new_passwd">新密码:</string>
    <string name="passwd_page_user_new_passwd_confirm">确认密码:</string>
    <string name="passwd_page_button">修改密码</string>

    <!-- 扫描二维码解析结果验证页面-->
    <string name="person_barcode_page_title">会员详情</string>
    <string name="person_barcode_invalid_scan_info">不是有效的个人信息</string>

    <!--创建活动页面-->
    <string name="new_bulletin_title_empty">活动名称为空</string>
    <string name="new_bulletin_pic_content_empty">选择活动内容图片</string>
    <string name="new_bulletin_pic_content">活动内容图片</string>
    <string name="new_bulletin_content_empty">活动内容为空</string>
    <string name="new_bulletin_thumb_pic_empty">选择活动缩略图片</string>
    <string name="new_bulletin_thumb_pic">选择活动缩略图片</string>
    <string name="new_bulletin_start_date_empty">活动开始日期为空</string>
    <string name="new_bulletin_end_date_empty">活动结束日期为空</string>
    <string name="new_bulletin_end_date_before_start_date">活动结束日期在开始日期之前</string>

</resources>
