<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by zhangchong on 4/8/2016.
  ~ Copyright (c) 2016 com.infohold.TradeInfoSys. All rights reserved.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@mipmap/ic_search"
        android:title="@string/menu_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_change_password"
        android:orderInCategory="100"
        android:title="@string/action_change_password"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about_us"
        android:orderInCategory="100"
        android:title="@string/action_about_us"
        app:showAsAction="never" />
</menu>
