<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by zhangchong on 4/8/2016.
  ~ Copyright (c) 2016 com.infohold.TradeInfoSys. All rights reserved.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/function_scan" />
        <item
            android:id="@+id/nav_bulletin"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/function_bulletin" />
    </group>

    <item android:title="@string/function_logout">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/function_logout" />
        </menu>
    </item>
</menu>
