<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by zhangchong on 4/6/2016.
  ~ Copyright (c) 2016 com.infohold.TradeInfoSys. All rights reserved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include layout="@layout/tool_bar_common" />
    </android.support.design.widget.AppBarLayout>


    <TextView
        android:id="@+id/passwd_page_user_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:gravity="center"
        android:text="系统用户"
        android:textSize="20dp" />


    <EditText
        android:id="@+id/passwd_page_user_old_passwd_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:password="true"
        android:hint="@string/passwd_page_user_old_passwd"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/passwd_page_user_new_passwd_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwd_page_user_new_passwd"
        android:paddingLeft="20dp"
        android:password="true"
        android:textSize="20dp" />


    <EditText
        android:id="@+id/passwd_page_user_new_passwd_confirm_edit_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/passwd_page_user_new_passwd_confirm"
        android:paddingLeft="20dp"
        android:password="true"
        android:textSize="20dp" />


    <Button
        android:id="@+id/passwd_page_user_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/passwd_page_button"
        android:textSize="20dp" />


</LinearLayout>
