<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:background="@color/colorWhite"
    android:gravity="top"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/login_page_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/ic_launcher"
        android:layout_centerHorizontal="true"
        android:layout_margin="40dp"
        android:padding="40dp"
        />

    <TextView
        android:id="@+id/login_page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/login_page_icon"
        android:layout_marginBottom="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/login_page_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_page_title"
        android:inputType="text"
        android:singleLine="true"
        android:maxLength="16"
        android:hint="@string/login_page_promote_user_name"
        android:text=""
        />

    <EditText
        android:id="@+id/login_page_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:singleLine="true"
        android:maxLength="16"
        android:layout_below="@id/login_page_user_name"
        android:hint="@string/login_page_promote_password"
        android:text=""
        android:layout_marginBottom="20dp"
        />
    <Button
        android:id="@+id/login_page_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_page_password"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:textAlignment="center"
        android:text="@string/login_page_sign_in"
        />
</RelativeLayout>